# todo_api_rs

./: .env.development  .env.test  .gitignore  .spectral.yaml  Cargo.toml  Makefile  README.md  compose.yaml  rust-toolchain.toml  schema.sql
.github/workflows/: lint.yaml
docker/db/init/: create_database.sql
docs/: openapi.yaml
src/: env.rs  handler.rs  id.rs  main.rs  password.rs  sql.rs  task.rs  test_helper.rs  usecase.rs  user.rs
src/handler/: auth_middleware.rs  create_task.rs  create_user.rs  delete_task.rs  get_healthz.rs  healthz.rs  login.rs  tasks.rs  users.rs
src/handler/healthz/: get.rs
src/handler/login/: post.rs
src/handler/tasks/: delete.rs  get.rs  list.rs  post.rs
src/handler/users/: post.rs
src/sql/: delete_task_by_id.rs  get_task_by_id.rs  list_tasks.rs
src/task/: deadline.rs  description.rs  id.rs  status.rs  title.rs
src/usecase/: create_task.rs  create_user.rs  delete_task.rs
src/user/: access_token.rs  email.rs  id.rs  password.rs
