[package]
name = "todo_api_rs"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
tokio = { version = "1.39.2", features = ["full"] }
dotenvy = "0.15.7"
sqlx = { version = "0.8.0", features = ["runtime-tokio", "postgres", "uuid"] }
bcrypt = "0.15.1"
regex = "1.10.6"
uuid = { version = "1.10.0", features = ["v7"] }
serde = { version = "1.0.208", features = ["derive"] }
jsonwebtoken = "9.3.0"
chrono = "0.4.38"
